--- a/assigment 2.ipynb
+++ b/assigment 2.ipynb
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "7ffc647c",
    "metadata": {},
    "outputs": [
@@ -1108,7 +1108,7 @@
        "steps_mean -0.085936 -0.017788    1.000000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,9 +1120,478 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc6bd195",
+   "metadata": {},
+   "source": [
+    "Explain linear regression in your own words:\n",
+    "Namate x toeneemt stijgt y steeds met hetzelfde getal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c3b1f0f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>city</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>hh_size</th>\n",
+       "      <th>education</th>\n",
+       "      <th>education_1</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>20-6-2013</th>\n",
+       "      <th>...</th>\n",
+       "      <th>6-5-2014</th>\n",
+       "      <th>7-5-2014</th>\n",
+       "      <th>8-5-2014</th>\n",
+       "      <th>9-5-2014</th>\n",
+       "      <th>10-5-2014</th>\n",
+       "      <th>11-5-2014</th>\n",
+       "      <th>12-5-2014</th>\n",
+       "      <th>13-5-2014</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>steps_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bordeaux</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>25-34</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Master or doctorate</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30.930438</td>\n",
+       "      <td>10205.521212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Lille</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>35-44</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Bachelor</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23.765432</td>\n",
+       "      <td>5687.423313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Montpellier</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>25-34</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Master or doctorate</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6227.0</td>\n",
+       "      <td>4567.0</td>\n",
+       "      <td>2567.0</td>\n",
+       "      <td>1129.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25.617284</td>\n",
+       "      <td>8301.729730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Lyon</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>&lt;25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bachelor</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25.249337</td>\n",
+       "      <td>3633.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Montpellier</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>25-34</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Bachelor</td>\n",
+       "      <td>167.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21.872423</td>\n",
+       "      <td>5312.129630</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 339 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id         city  gender    age  hh_size  education          education_1  \\\n",
+       "0   1     Bordeaux    Male  25-34        4          4  Master or doctorate   \n",
+       "1   2        Lille    Male  35-44        1          3             Bachelor   \n",
+       "2   3  Montpellier    Male  25-34        2          2  Master or doctorate   \n",
+       "3   4         Lyon    Male    <25        1          1             Bachelor   \n",
+       "4   5  Montpellier  Female  25-34        3          4             Bachelor   \n",
+       "\n",
+       "   height  weight  20-6-2013  ...  6-5-2014  7-5-2014  8-5-2014  9-5-2014  \\\n",
+       "0   178.0    98.0        NaN  ...       NaN       NaN       NaN       NaN   \n",
+       "1   180.0    77.0        NaN  ...       NaN       NaN       NaN       NaN   \n",
+       "2   180.0    83.0        NaN  ...       NaN       NaN       NaN    6227.0   \n",
+       "3   178.0    80.0        NaN  ...       NaN       NaN       NaN       NaN   \n",
+       "4   167.0    61.0        NaN  ...       NaN       NaN       NaN       NaN   \n",
+       "\n",
+       "   10-5-2014  11-5-2014  12-5-2014  13-5-2014        bmi    steps_mean  \n",
+       "0        NaN        NaN        NaN        NaN  30.930438  10205.521212  \n",
+       "1        NaN        NaN        NaN        NaN  23.765432   5687.423313  \n",
+       "2     4567.0     2567.0     1129.0        NaN  25.617284   8301.729730  \n",
+       "3        NaN        NaN        NaN        NaN  25.249337   3633.200000  \n",
+       "4        NaN        NaN        NaN        NaN  21.872423   5312.129630  \n",
+       "\n",
+       "[5 rows x 339 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c7d20b78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>hh_size</th>\n",
+       "      <th>education</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>20-6-2013</th>\n",
+       "      <th>21-6-2013</th>\n",
+       "      <th>22-6-2013</th>\n",
+       "      <th>23-6-2013</th>\n",
+       "      <th>...</th>\n",
+       "      <th>steps_mean</th>\n",
+       "      <th>city_Lille</th>\n",
+       "      <th>city_Lyon</th>\n",
+       "      <th>city_Montpellier</th>\n",
+       "      <th>gender_Male</th>\n",
+       "      <th>education_1_High school</th>\n",
+       "      <th>education_1_Master or doctorate</th>\n",
+       "      <th>education_1_No degree</th>\n",
+       "      <th>education_1_Primary</th>\n",
+       "      <th>education_1_Vocational</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>25-34</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10205.521212</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>35-44</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10473.0</td>\n",
+       "      <td>705.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5687.423313</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>25-34</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11428.0</td>\n",
+       "      <td>12523.0</td>\n",
+       "      <td>2553.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8301.729730</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>&lt;25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3633.200000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>25-34</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>167.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5312.129630</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 345 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id    age  hh_size  education  height  weight  20-6-2013  21-6-2013  \\\n",
+       "0   1  25-34        4          4   178.0    98.0        NaN        NaN   \n",
+       "1   2  35-44        1          3   180.0    77.0        NaN        NaN   \n",
+       "2   3  25-34        2          2   180.0    83.0        NaN    11428.0   \n",
+       "3   4    <25        1          1   178.0    80.0        NaN        NaN   \n",
+       "4   5  25-34        3          4   167.0    61.0        NaN        NaN   \n",
+       "\n",
+       "   22-6-2013  23-6-2013  ...    steps_mean  city_Lille  city_Lyon  \\\n",
+       "0        NaN        NaN  ...  10205.521212           0          0   \n",
+       "1    10473.0      705.0  ...   5687.423313           1          0   \n",
+       "2    12523.0     2553.0  ...   8301.729730           0          0   \n",
+       "3        NaN        NaN  ...   3633.200000           0          1   \n",
+       "4        NaN        NaN  ...   5312.129630           0          0   \n",
+       "\n",
+       "   city_Montpellier  gender_Male  education_1_High school  \\\n",
+       "0                 0            1                        0   \n",
+       "1                 0            1                        0   \n",
+       "2                 1            1                        0   \n",
+       "3                 0            1                        0   \n",
+       "4                 1            0                        0   \n",
+       "\n",
+       "   education_1_Master or doctorate  education_1_No degree  \\\n",
+       "0                                1                      0   \n",
+       "1                                0                      0   \n",
+       "2                                1                      0   \n",
+       "3                                0                      0   \n",
+       "4                                0                      0   \n",
+       "\n",
+       "   education_1_Primary  education_1_Vocational  \n",
+       "0                    0                       0  \n",
+       "1                    0                       0  \n",
+       "2                    0                       0  \n",
+       "3                    0                       0  \n",
+       "4                    0                       0  \n",
+       "\n",
+       "[5 rows x 345 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dummies = pd.get_dummies(df,columns=['city','gender','education_1'],drop_first= True)\n",
+    "df_dummies.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7386538d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_test_split' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-faf0553febef>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'id'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mx_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m23\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#splits the data into train (70%) and test (30%) data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'train_test_split' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "x = df[['steps_mean']]\n",
+    "y = df['id']\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split (x, y, test_size = 0.3,random_state=23) #splits the data into train (70%) and test (30%) data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb8b288a",
+   "id": "87e21c42",
    "metadata": {},
    "outputs": [],
    "source": []
